@@ -8,23 +8,19 @@ package ball.http.annotation;
 import java.lang.annotation.Documented;
 import java.lang.annotation.Retention;
 import java.lang.annotation.Target;
-import org.apache.http.client.methods.HttpHead;
 
-import static ball.util.StringUtil.NIL;
-import static java.lang.annotation.ElementType.METHOD;
+import static java.lang.annotation.ElementType.PARAMETER;
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
 
 /**
- * {@link java.lang.annotation.Annotation} to an interface method as an
- * {@code HTTP HEAD} message.
+ * {@link java.lang.annotation.Annotation} to an interface method parameter
+ * as an URI host parameter.
  *
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
 @Documented
 @Retention(RUNTIME)
-@Target({ METHOD })
-public @interface HEAD {
-    String value() default NIL;
-    Class<? extends HttpHead> type() default HttpHead.class;
+@Target({ PARAMETER })
+public @interface HostParameter {
 }
